added custom handlers,refactored user entity so that the failed login attempts and log out time are saved in there.